--- a/config/database.yml
+++ b/config/database.yml
@@ -2,6 +2,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  port: 5432
+  host: localhost
   username: <%= ENV.fetch('DATABASE_USERNAME') %>
   password: <%= ENV.fetch('DATABASE_PASSWORD') %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
